<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:fillViewport="true"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="16dp">

        <!-- Logo + Nombre -->
        <LinearLayout
            android:id="@+id/header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:orientation="horizontal"
            android:gravity="center">

            <ImageView
                android:id="@+id/logo_login"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:contentDescription="@string/desc_logo"
                app:srcCompat="@mipmap/ic_launcher_round" />

            <TextView
                android:id="@+id/nombre_app"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/nombre_app"
                android:textColor="@color/white"
                android:textSize="40sp"
                android:textStyle="bold" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="80dp" />

        <!-- Texto introductorio -->
        <TextView
            android:id="@+id/texto_login"
            android:layout_width="315dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="sans-serif"
            android:text="@string/texto_login"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="27sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="60dp" />

        <!-- Usuario -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_nombres"
            android:layout_width="match_parent"
            android:layout_height="67dp"
            android:layout_marginTop="32dp"
            app:boxBackgroundColor="@color/white"
            app:startIconDrawable="@mipmap/user_foreground">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_Usuario"
                android:inputType="text"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="25dp" />

        <!-- Contraseña -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_contraseña_layout"
            android:layout_width="match_parent"
            android:layout_height="67dp"
            android:layout_marginTop="16dp"
            app:boxBackgroundColor="@color/white"
            app:endIconMode="password_toggle"
            app:startIconDrawable="@mipmap/key_foreground">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_contraseña"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_Contraseña"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="60dp" />

        <!-- Botón Ingresar -->
        <Button
            android:id="@+id/boton_login"
            style="@style/CustomButton"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="24dp"
            android:text="@string/boton_Ingresar"
            android:textSize="18sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <!-- Recuperar contraseña -->
        <TextView
            android:id="@+id/link_recuperacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/link_recuperacion"
            android:textColor="@color/blue"
            android:textSize="18sp"
            android:gravity="center"
            android:layout_gravity="center_horizontal" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <!-- Botón Google -->
        <LinearLayout
            android:id="@+id/google_button"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/botones"
            android:gravity="center_vertical"
            android:paddingHorizontal="12dp">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="20dp"
                android:contentDescription="@string/desc_imggoogle"
                android:src="@mipmap/google_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/link_Google"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <!-- Registro -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:layout_gravity="center_horizontal">

            <TextView
                android:id="@+id/texto_registro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/texto_cuenta"
                android:textColor="@color/white"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/link_registro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/link_registro"
                android:textColor="@color/blue"
                android:textSize="18sp"
                android:layout_marginStart="8dp"/>
        </LinearLayout>

    </LinearLayout>
</ScrollView>
